infra/registry-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: docker-registry-ingress
  namespace: container-registry
spec:
  ingressClassName: nginx
  rules:
    - host: registry.bastian-somon.fr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: docker-registry
                port:
                  number: 5000
  tls:
    - secretName: registry-account-key
      hosts:
        - registry.bastian-somon.fr
